fix: add min height to club about section to prevent image overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -983,6 +983,9 @@ then move to the top of the section on smaller screen sizes */
 
 #club-page-about-section-wrapper{
     position: relative;
+
+    /* prevents images overlapping */
+    min-height: 550px;
 }
 
 #club-page-about-heading,
